--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kids School</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
-<body>
-    
+
+<body class="quicksand-font">
+    <header>
+        <nav class="navbar display-flex">
+            <div class="logo-container display-flex">
+                <img src="assets/logo.png" alt="">
+                <h2 class="logo-title">SCHOOL</h2>
+            </div>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link text-yellow">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-sky">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-light-green">Facilities</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-blue">Admission</a></li>
+            </ul>
+            <button class="btn-primary text-white">Contact</button>
+            <img src="assets/nav.png" alt="" id="nav-icon-small-device">
+        </nav>
+    </header>
 </body>
+
 </html>
