--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li class="nav-item"><a href="" class="nav-link text-light-green">Facilities</a></li>
                 <li class="nav-item"><a href="" class="nav-link text-blue">Admission</a></li>
             </ul>
-            <button class="btn-primary text-white">Contact</button>
+            <button class="nav-btn text-white">Contact</button>
             <img src="assets/nav.png" alt="" id="nav-icon-small-device">
         </nav>
     </header>
