--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
             <button class="nav-btn text-white">Contact</button>
             <img src="assets/nav.png" alt="" id="nav-icon-small-device">
         </nav>
+        <div class="banner display-flex">
+            <div class="banner-content">
+                <h1 class="banner-title"><span id="h1-yellow">Empowering</span> <br> students from small <br> age <span id="h1-blue">towards vision</span></h1>
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <button class="btn-black">Enroll Now</button>
+            </div>
+            <div><img class="banner-image" src="assets/hero-kids.png" alt=""></div>
+        </div>
     </header>
 </body>
 
