--- a/index.html
+++ b/index.html
@@ -33,6 +33,31 @@
             <div><img class="banner-image" src="assets/hero-kids.png" alt=""></div>
         </div>
     </header>
+    <main>
+        <section class="curriculum-section">
+            <h2 class="section-title">Standard Curriculum</h2>
+            <div class="curriculum-container display-flex">
+                <div class="curriculum-card-1">
+                    <img src="assets/kinder.png" alt="">
+                    <h3 class="curriculum-title">Kinder (3-6) Years</h3>
+                    <p class="curriculum-description">Kindergarten is a stage of education for children between the ages of 3 and 6. It's a gentle introduction to school.</p>
+                    <p class="text-sky">Read More</p>
+                </div>
+                <div class="curriculum-card-2">
+                    <img src="assets/elementary.png" alt="">
+                    <h3 class="curriculum-title">Elementary School</h3>
+                    <p class="curriculum-description">An elementary school is a school that provides the first part of a child's education. It's also known as a primary school or grade school.</p>
+                    <p class="text-yellow">Read More</p>
+                </div>
+                <div class="curriculum-card-3">
+                    <img src="assets/middle.png" alt="">
+                    <h3 class="curriculum-title">Middle (10-16) Years</h3>
+                    <p class="curriculum-description">The years between 10 and 16 are part of adolescence, which is the transition period between childhood and adulthood.</p>
+                    <p class="text-blue">Read More</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
