--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
         </nav>
         <div class="banner display-flex">
             <div class="banner-content">
-                <h1 class="banner-title"><span id="h1-yellow">Empowering</span><br>students from small<br>age <span id="h1-blue">towards vision</span></h1>
-                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make <br> their Unique Contribution in a Diverse and Dynamic World.</p>
+                <h1 class="banner-title"><span id="h1-yellow">Empowering</span><br>students from small<br>age <span
+                        id="h1-blue">towards vision</span></h1>
+                <p class="banner-description">With the courage, Confidence, Creativity and Compassion to make <br> their
+                    Unique Contribution in a Diverse and Dynamic World.</p>
                 <button class="btn-black">Enroll Now</button>
             </div>
             <div><img class="banner-image" src="assets/hero-kids.png" alt=""></div>
@@ -40,20 +42,59 @@
                 <div class="curriculum-card-1">
                     <img src="assets/kinder.png" alt="">
                     <h3 class="curriculum-title">Kinder (3-6) Years</h3>
-                    <p class="curriculum-description">Kindergarten is a stage of education for children between the ages of 3 and 6. It's a gentle introduction to school.</p>
+                    <p class="curriculum-description">Kindergarten is a stage of education for children between the ages
+                        of 3 and 6. It's a gentle introduction to school.</p>
                     <p class="text-sky">Read More</p>
                 </div>
                 <div class="curriculum-card-2">
                     <img src="assets/elementary.png" alt="">
                     <h3 class="curriculum-title">Elementary School</h3>
-                    <p class="curriculum-description">An elementary school is a school that provides the first part of a child's education. It's also known as a primary school or grade school.</p>
+                    <p class="curriculum-description">An elementary school is a school that provides the first part of a
+                        child's education. It's also known as a primary school or grade school.</p>
                     <p class="text-yellow">Read More</p>
                 </div>
                 <div class="curriculum-card-3">
                     <img src="assets/middle.png" alt="">
                     <h3 class="curriculum-title">Middle (10-16) Years</h3>
-                    <p class="curriculum-description">The years between 10 and 16 are part of adolescence, which is the transition period between childhood and adulthood.</p>
+                    <p class="curriculum-description">The years between 10 and 16 are part of adolescence, which is the
+                        transition period between childhood and adulthood.</p>
                     <p class="text-blue">Read More</p>
+                </div>
+            </div>
+            <div id="forward-backward">
+                <button class="forward">
+                    < </button>
+                        <button class="backward"> > </button>
+            </div>
+        </section>
+        <section class="stories-section">
+            <h3 class="stories-title">Our Stories</h3>
+            <div class="stories-container">
+                <div class="story-1">
+                    <img src="assets/story-1.png" alt="">
+                    <h4 class="story-1-title">A fun toddler coloring training on <br>classroom</h4>
+                    <p class="story-1-description">Beautiful branding for changes by Never Now in Australia. changes is
+                        a platform for open discussion in an inclusive and collaborative environment, providing the...
+                    </p>
+                </div>
+                <div class="story-2">
+                    <img src="assets/story-2.png" alt="">
+                    <h5 class="story-2-title">Find out if a school fits the
+                        family’s needs</h5>
+                </div>
+                <div class="story-2">
+                    <img src="assets/story-3.png" alt="">
+                    <h5 class="story-2-title">Summer math & literacy <br>centres for kids</h5>
+                </div>
+                <div class="story-2">
+                    <img src="assets/story-4.png" alt="">
+                    <h5 class="story-2-title">Classroom management
+                        techniques for new tutorss</h5>
+                </div>
+                <div class="story-2">
+                    <img src="assets/story-5.png" alt="">
+                    <h5 class="story-2-title">Conversation rhymes
+                        improve kids listening</h5>
                 </div>
             </div>
         </section>
